added function for alternating colors

--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -7,6 +7,10 @@
     background-color: #da8a8a;
 }
 
+.alternate {
+    background-color: aquamarine
+}
+
 table {
   color: #111;
   border-radius: 5px;
