add orbit-counts component

--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -11,7 +11,7 @@
     background-color: #dad8d8;
 }
 .alternate:nth-child(even){
-    background-color: aquamarine;
+    background-color: #41b531;
 }
 table {
   color: #111;
